just practicing using github

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -31,6 +31,7 @@
         <li>Vanilla Extract</li>
         <li>White Chocolate Chips</li>
         <li>Macademia Nuts</li>
+        <li>Time and Effort</li>
     </ul>
 
     <h3>Directions</h3>
