Another github practice

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -32,6 +32,7 @@
         <li>White Chocolate Chips</li>
         <li>Macademia Nuts</li>
         <li>Time and Effort</li>
+        <li>Time and Effort 2</li>
     </ul>
 
     <h3>Directions</h3>
