--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/cookies.html">White Chocolate Chip Macademia Nut Cookies</a>
+    <ul>    
+        <li><a href="./recipes/cookies.html">White Chocolate Chip Macademia Nut Cookies</a></li>
+
+        <li><a href="./recipes/pasta.html">Pasta</a></li>
+
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
+
+    </ul>
 
 
 
